...
    <string name="account_logout">Logout</string>
    <string name="settings_item_text">Settings</string>

    <!-- Navigation drawer alert messages: -->

    <!-- Strings used by multiple activities/dialogs -->
    <string name="dialog_ok_text">OK</string>
    <string name="dialog_no_text">No</string>
    <string name="dialog_yes_text">Yes</string>
    <string name="dialog_cancel_text">Cancel</string>

    <string name="dialog_btn_delete">Delete</string>
    <string name="dialog_btn_crop">Crop</string>
    <string name="dialog_btn_upload">Upload</string>
    <string name="dialog_btn_upload_again">Upload again</string>
...
    <string name="images_no_active_document">No active document\nPlease select a document first!</string>
    <string name="images_no_images">No images for document\nPlease take an image first!</string>

    <string name="action_document_crop_title">Crop images</string>
    <string name="action_document_upload_document">Upload</string>
    <string name="action_document_cancel_upload_document">Cancel upload</string>
    <string name="action_document_pdf_title">Save as PDF</string>
    <string name="action_document_zip_title">Save as ZIP</string>
    <string name="action_document_delete_document">Delete</string>
    <string name="action_document_edit_document">Edit document</string>
    <string name="action_document_continue_document">Continue imaging</string>

    <string name="action_share">Share</string>

    <string name="action_rotate_left_title">Rotate left</string>
    <string name="action_rotate_right_title">Rotate right</string>
...
    <string name="viewer_not_cropped_export_confirm_text">Some images are not cropped.\nDo you want to proceed with the export?</string>
    <string name="viewer_delete_pdf_title">Delete</string>
    <string name="viewer_delete_pdf_text">Are you sure you want to delete the pdf? This cannot be undone.</string>
    <string name="viewer_document_dir_set_title">Permission given</string>
    <string name="viewer_document_dir_set_text">You can now proceed and export documents to pdf.</string>

    <string name="pdf_fragment_persisted_permission_title">Permission required</string>
    <string name="pdf_fragment_persisted_permission_text">Your permission is required to show the
        pdf\'s, which have been saved in the documents folder.
        Do you want to grant your permission for this folder now?</string>

    <!-- PdfSelectorActivity -->

...
