<?xml version="1.0" encoding="utf-8"?>
<androidx.drawerlayout.widget.DrawerLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true"
    android:id="@+id/drawer_layout"
    >

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">
    <androidx.coordinatorlayout.widget.CoordinatorLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:id="@+id/sync_coordinatorlayout"
        android:layout_above="@id/viewer_navigation"
        >

        <com.google.android.material.appbar.AppBarLayout
            android:id="@+id/gallery_appbar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            >
            <include layout="@layout/toolbar_autohide" />
            <!--<androidx.appcompat.widget.Toolbar-->
                <!--android:id="@+id/main_toolbar"-->
                <!--android:layout_width="match_parent"-->
                <!--android:layout_height="?android:attr/actionBarSize"-->
                <!--app:layout_scrollFlags="scroll|enterAlways"-->
                <!--/>-->
        </com.google.android.material.appbar.AppBarLayout>

        <!--This is where the fragments are placed:-->
        <FrameLayout
            android:id="@+id/viewer_fragment_layout"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            app:layout_behavior="com.google.android.material.appbar.AppBarLayout$ScrollingViewBehavior"
            app:useCompatPadding="true"
            />

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="bottom|right"
            android:orientation="vertical"
            app:layout_dodgeInsetEdges="bottom"
            >

            <!--Dummy layout, to make both fab's overlapping-->
            <FrameLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"

                >
                <com.google.android.material.floatingactionbutton.FloatingActionButton
                    android:id="@+id/viewer_add_fab"
                    android:onClick="newDocument"
                    android:background="@color/light_gray"
                    android:backgroundTint="@color/light_gray"
                    app:borderWidth="0dp"
                    app:srcCompat="@drawable/ic_add_circle_black_24dp"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    app:layout_anchor="@+id/viewer_camera_fab"
                    android:layout_margin="12dp"
                    />
                <com.google.android.material.floatingactionbutton.FloatingActionButton
                    android:id="@+id/viewer_edit_fab"
                    android:visibility="invisible"
                    android:onClick="openDocumentOptions"
                    android:background="@color/light_gray"
                    android:backgroundTint="@color/light_gray"
                    app:borderWidth="0dp"
                    app:srcCompat="@drawable/ic_edit_black_24dp"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="12dp"
                    />
            </FrameLayout>
            <com.google.android.material.floatingactionbutton.FloatingActionButton
                android:id="@+id/viewer_camera_fab"
                android:onClick="startCamera"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:srcCompat="@drawable/ic_camera_alt_black_24dp"
                android:layout_margin="12dp"
                />
        </LinearLayout>


        <!--android:background="@color/colorPrimary"-->
        <!--app:itemIconTint="@drawable/navigation_colors"-->
        <!--app:itemTextColor="@drawable/navigation_colors"-->
        <!---->

    </androidx.coordinatorlayout.widget.CoordinatorLayout>

    <com.google.android.material.bottomnavigation.BottomNavigationView
        android:id="@+id/viewer_navigation"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        app:menu="@menu/document_navigation_menu"
        app:itemIconTint="@drawable/bottom_navigation_colors"
        app:itemTextColor="@drawable/bottom_navigation_colors"
        />

        <!--android:layout_gravity="bottom"-->

    </RelativeLayout>
    <!-- The navigation drawer -->
    <include layout="@layout/navigation_view"/>

</androidx.drawerlayout.widget.DrawerLayout>

