...
            android:layout_height="match_parent">
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_margin="@dimen/activity_vertical_margin">
            <EditText
                android:id="@+id/create_series_name_edittext"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="text"
                android:hint="@string/create_series_name_hint"
                android:imeOptions="actionDone"/>
            <android.support.v7.widget.AppCompatButton
                android:id="@+id/create_series_done_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/create_series_name_edittext"
                android:layout_centerInParent="true"
                android:layout_marginTop="@dimen/activity_vertical_margin"
                app:backgroundTint="@color/colorAccent"
...
